--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codekart",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "a Node.js MVC Framework",
   "main": "index.js",
   "dependencies": {
@@ -31,7 +31,7 @@
   	"api"
   ],
   "author": {
-    "name": "Ñî½Ý",
+    "name": "ï¿½ï¿½ï¿½",
     "email": "myworld4059@163.com",
     "url": "http://jojoin.com/user/1/"
   },
