--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "codekart",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "a Node.js MVC Framework",
   "main": "index.js",
   "dependencies": {
     "mysql":"2.0.0-rc1",
-    "redis":"0.10.0"
+    "redis":"0.10.0",
+    "ws":"0.4.31"
   },
   "devDependencies": {},
   "scripts": {
@@ -16,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/myworld4059/Codekart.git"
+    "url": "https://github.com/yangjiePro/Codekart.git"
   },
   "keywords": [
   	"codekart",
@@ -32,11 +33,11 @@
   ],
   "author": {
     "name": "杨捷",
-    "email": "myworld4059@163.com",
+    "email": "yangjie@jojoin.com",
     "url": "http://jojoin.com/user/1/"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/myworld4059/Codekart/issues"
+    "url": "https://github.com/yangjiePro/Codekart/issues"
   }
 }
